// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag should have a link 1`] = `
<scale-tag href="#">
  <mock:shadow-root>
    <style>
      .tag-0-0-7 {
  display: inline-flex;
  padding: 0 10px;
  font-size: 16px;
  text-align: center;
  transition: all 0.15s ease-in-out;
  align-items: center;
  font-family: TeleNeoWeb-Bold;
  font-weight: 400;
  line-height: 24px;
  white-space: nowrap;
  border-radius: 4px;
  vertical-align: baseline;
  justify-content: center;
  background: #262626;
  color: #FFF;
  --icon-color: #FFF;
}
.tag-0-0-7 scale-icon {
  margin-left: 2px;
}
.tag-0-0-7:not(.tag--disabled-0-0-12) {}
.tag-0-0-7:not(.tag--disabled-0-0-12) scale-icon {}
.tag-0-0-7:not(.tag--disabled-0-0-12) scale-icon:hover {
  --icon-color: #CB0068;
}
.tag--dismissable-0-0-8 {
  padding-right: 2px;
}
.tag--size-small-0-0-9 {
  padding: 0 8px;
  font-size: 12px;
  line-height: 20px;
}
.tag--size-small-0-0-9.tag--dismissable-0-0-8 {
  padding-right: 2px;
}
.tag--variant-secondary-0-0-10 {
  background: #00739F;
  border: 1px solid #00739F;
}
.tag--variant-secondary-0-0-10.tag--disabled-0-0-12 {
  border: none;
  opacity: 0.5;
  background: #00739F;
  color: #FFF;
  --icon-color: #FFF;
}
.tag--link-0-0-11 {
  text-decoration: none;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10 {
  background: #00739F;
  border: 1px solid #00739F;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10:hover {
  background: #00739F;
  border: 1px solid #00739F;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10:focus {
  background: #00739F;
  border: 1px solid #00739F;
}
.tag--disabled-0-0-12 {
  color: #A4A4A4;
  cursor: not-allowed;
  --icon-color: #A4A4A4;
  background: #D0D0D0;
}
    </style>
    <a class="tag--link-0-0-11 tag-0-0-7" href="#" target="_self">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Label
</scale-tag>
`;

exports[`Tag should match snapshot 1`] = `
<scale-tag>
  <mock:shadow-root>
    <style>
      .tag-0-0-7 {
  display: inline-flex;
  padding: 0 10px;
  font-size: 16px;
  text-align: center;
  transition: all 0.15s ease-in-out;
  align-items: center;
  font-family: TeleNeoWeb-Bold;
  font-weight: 400;
  line-height: 24px;
  white-space: nowrap;
  border-radius: 4px;
  vertical-align: baseline;
  justify-content: center;
  background: #262626;
  color: #FFF;
  --icon-color: #FFF;
}
.tag-0-0-7 scale-icon {
  margin-left: 2px;
}
.tag-0-0-7:not(.tag--disabled-0-0-12) {}
.tag-0-0-7:not(.tag--disabled-0-0-12) scale-icon {}
.tag-0-0-7:not(.tag--disabled-0-0-12) scale-icon:hover {
  --icon-color: #CB0068;
}
.tag--dismissable-0-0-8 {
  padding-right: 2px;
}
.tag--size-small-0-0-9 {
  padding: 0 8px;
  font-size: 12px;
  line-height: 20px;
}
.tag--size-small-0-0-9.tag--dismissable-0-0-8 {
  padding-right: 2px;
}
.tag--variant-secondary-0-0-10 {
  background: #00739F;
  border: 1px solid #00739F;
}
.tag--variant-secondary-0-0-10.tag--disabled-0-0-12 {
  border: none;
  opacity: 0.5;
  background: #00739F;
  color: #FFF;
  --icon-color: #FFF;
}
.tag--link-0-0-11 {
  text-decoration: none;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10 {
  background: #00739F;
  border: 1px solid #00739F;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10:hover {
  background: #00739F;
  border: 1px solid #00739F;
}
.tag--link-0-0-11.tag--variant-secondary-0-0-10:focus {
  background: #00739F;
  border: 1px solid #00739F;
}
.tag--disabled-0-0-12 {
  color: #A4A4A4;
  cursor: not-allowed;
  --icon-color: #A4A4A4;
  background: #D0D0D0;
}
    </style>
    <span class="tag-0-0-7">
      <slot></slot>
    </span>
  </mock:shadow-root>
  Label
</scale-tag>
`;
